Keeko Tools Suite update
- Make commands atomic
- keeko magic to run them all
- keeko generate:action generates traits

--- a/templates/actions/blank-run.twig
+++ b/templates/actions/blank-run.twig
@@ -1,1 +1,3 @@
+// uncomment the following to pass data to your response
+// $this->response->setData($data);
 return $this->response->run($request);
