--- a/templates/response/modelToArray.twig
+++ b/templates/response/modelToArray.twig
@@ -1,1 +1,1 @@
-return $this->filter(${{ model }}->toArray(TableMap::TYPE_STUDLYPHPNAME));
+return $this->filter(${{ model }}->toArray(TableMap::TYPE_CAMELNAME));
