--- a/templates/response/json/dump-model.twig
+++ b/templates/response/json/dump-model.twig
@@ -1,2 +1,2 @@
 // return response
-return new JsonResponse($this->{{ model }}ToArray($this->data));
+return new JsonResponse($this->{{ model }}ToArray($data));
