--- a/templates/response/json/list-run.twig
+++ b/templates/response/json/list-run.twig
@@ -2,17 +2,17 @@ $out = [];
 
 // build model
 $out['{{ models }}'] = [];
-foreach ($this->data as ${{ model }}) {
+foreach ($data as ${{ model }}) {
 	$out['{{ models }}'][] = $this->{{ model }}ToArray(${{ model }});
 }
 
 // meta
 $out['meta'] = [
-	'total' => $this->data->getNbResults(),
-	'first' => $this->data->getFirstPage(),
-	'next' => $this->data->getNextPage(),
-	'previous' => $this->data->getPreviousPage(),
-	'last' => $this->data->getLastPage()
+	'total' => $data->getNbResults(),
+	'first' => $data->getFirstPage(),
+	'next' => $data->getNextPage(),
+	'previous' => $data->getPreviousPage(),
+	'last' => $data->getLastPage()
 ];
 
 // return response
