--- a/templates/actions/delete-run.twig
+++ b/templates/actions/delete-run.twig
@@ -10,6 +10,5 @@ if (${{ model }} === null) {
 // delete
 ${{ model }}->delete();
 
-// set response and go
-$this->response->setData(${{ model }});
-return $this->response->run($request);
+// run response
+return $this->response->run($request, ${{ model }});
