--- a/templates/actions/list-run.twig
+++ b/templates/actions/list-run.twig
@@ -3,6 +3,5 @@ $page = $this->getParam('page');
 $perPage = $this->getParam('per_page');
 ${{ model }} = {{ class }}Query::create()->paginate($page, $perPage);
 
-// set response and go
-$this->response->setData(${{ model }});
-return $this->response->run($request);
+// run response
+return $this->response->run($request, ${{ model }});
