--- a/templates/response/json/create-run.twig
+++ b/templates/response/json/create-run.twig
@@ -1,2 +1,2 @@
 // return response
-return new JsonResponse($this->{{ model }}ToArray($this->data), 201);
+return new JsonResponse($this->{{ model }}ToArray($data), 201);
