New generators for relationships

--- a/templates/response/json/create-run.twig
+++ b/templates/response/json/create-run.twig
@@ -1,1 +1,5 @@
-return new JsonResponse($this->{{ model }}ToArray($data), 201);
+$serializer = {{ class }}::getSerializer();
+$resource = new Resource($data, $serializer);
+$document = new Document($resource);
+
+return new JsonResponse($document->toArray(), 201, ['Location' => $resource->getLinks()['self']]);
