--- a/templates/response/json/list-run.twig
+++ b/templates/response/json/list-run.twig
@@ -1,5 +1,8 @@
+$params = new Parameters($request->query->all());
 $serializer = {{ class }}::getSerializer();
 $resource = new Collection($data, $serializer);
+$resource = $resource->with($params->getInclude({{ includes|raw }}));
+$resource = $resource->fields($params->getFields({{ fields|raw }}));
 $document = new Document($resource);
 
 // meta
