--- a/templates/actions/to-many-read-run.twig
+++ b/templates/actions/to-many-read-run.twig
@@ -1,5 +1,9 @@
 $id = $this->getParam('id');
 ${{ model }} = {{ class }}Query::create()->findOneById($id);
 
+if (${{ model }} === null) {
+	throw new ResourceNotFoundException('{{ class }} with id ' . $id . ' does not exist');
+}
+
 // run response
 return $this->response->run($request, ${{ model }});
