--- a/templates/actions/update-run.twig
+++ b/templates/actions/update-run.twig
@@ -4,16 +4,18 @@ ${{ model }} = {{ class }}Query::create()->findOneById($id);
 
 // check existence
 if (${{ model }} === null) {
-	throw new ResourceNotFoundException('{{ model }} not found.');
+	throw new ResourceNotFoundException('{{ class }} not found.');
 }
 
 // hydrate
-$data = json_decode($request->getContent(), true);
-${{ model }} = HydrateUtils::hydrate($data, ${{ model }}, {{ fields|raw }});
+$data = Json::decode($request->getContent());
+$serializer = {{ class }}::getSerializer();
+${{ model }} = $serializer->hydrate(${{ model }}, $data);
 
 // validate
 if (!${{ model }}->validate()) {
 	throw new ValidationException(${{ model }}->getValidationFailures());
 } else {
+	${{ model }}->save();
 	return $this->response->run($request, ${{ model }});
 }
