--- a/templates/serializer/get-serializer.twig
+++ b/templates/serializer/get-serializer.twig
@@ -1,5 +1,5 @@
 if (self::$serializer === null) {
-	self::$serializer = new {{ class }}Serializer();
+	self::$serializer = new {{ class }}();
 }
 
 return self::$serializer;
