using domain objects everywhere

--- a/templates/action/create-run.twig
+++ b/templates/action/create-run.twig
@@ -1,4 +1,8 @@
-$data = Json::decode($request->getContent());
+$body = Json::decode($request->getContent());
+if (!isset($body['data'])) {
+	throw new InvalidParameterException();
+}
+$data = $body['data'];
 $domain = new {{ domain }}($this->getServiceContainer());
 $payload = $domain->create($data);
-return $this->response->run($request, $payload);
+return $this->responder->run($request, $payload);
