--- a/templates/action/delete-run.twig
+++ b/templates/action/delete-run.twig
@@ -1,4 +1,4 @@
 $id = $this->getParam('id');
 $domain = new {{ domain }}($this->getServiceContainer());
 $payload = $domain->delete($id);
-return $this->response->run($request, $payload);
+return $this->responder->run($request, $payload);
