--- a/templates/action/list-run.twig
+++ b/templates/action/list-run.twig
@@ -1,4 +1,4 @@
 $params = new Parameters($request->query->all());
 $domain = new {{ domain }}($this->getServiceContainer());
 $payload = $domain->paginate($params);
-return $this->response->run($request, $payload);
+return $this->responder->run($request, $payload);
