--- a/templates/action/update-run.twig
+++ b/templates/action/update-run.twig
@@ -1,5 +1,9 @@
 $id = $this->getParam('id');
-$data = Json::decode($request->getContent());
+$body = Json::decode($request->getContent());
+if (!isset($body['data'])) {
+	throw new InvalidParameterException();
+}
+$data = $body['data'];
 $domain = new {{ domain }}($this->getServiceContainer());
 $payload = $domain->update($id, $data);
-return $this->response->run($request, $payload);
+return $this->responder->run($request, $payload);
