--- a/templates/responder/json/model/created.twig
+++ b/templates/responder/json/model/created.twig
@@ -1,5 +1,5 @@
 $serializer = {{ class }}::getSerializer();
-$resource = new Resource($payload->get('model'), $serializer);
+$resource = new Resource($payload->getModel(), $serializer);
 $document = new Document($resource);
 
 return new JsonResponse($document->toArray(), 201, ['Location' => $resource->getLinks()['self']]);
