--- a/templates/serializer/to-one-read.twig
+++ b/templates/serializer/to-one-read.twig
@@ -3,4 +3,4 @@ $relationship = new Relationship(new Resource($model->get{{ ref }}(), $serialize
 $relationship->setLinks([
 	'related' => '%apiurl%' . $serializer->getType(null) . '/' . $serializer->getId($model)
 ]);
-return $this->addRelationshipSelfLink($relationship, $model, $related);
+return $this->addRelationshipSelfLink($relationship, $model, '{{ related }}');
