--- a/templates/action/to-many-add-run.twig
+++ b/templates/action/to-many-add-run.twig
@@ -1,24 +1,9 @@
-$body = $request->getContent();
+$body = Json::decode($request->getContent());
 if (!isset($body['data'])) {
 	throw new InvalidParameterException();
 }
 $data = $body['data'];
-
 $id = $this->getParam('id');
-${{ model }} = {{ class }}Query::create()->findOneById($id);
-
-if (${{ model }} === null) {
-	throw new ResourceNotFoundException('{{ model }} with id ' . $id . ' does not exist');
-} 
-
-foreach ($data as $entry) {
-	if (!isset($entry['id'])) {
-		throw new InvalidParameterException();
-	}
-	${{ foreign_model }} = {{ foreign_class }}Query::create()->findOneById($entry['id']);
-	${{ model }}->add{{ foreign_class }}(${{ foreign_model }});
-	${{ model }}->save();	
-}
-
-// run response
-return $this->response->run($request, ${{ model }});
+$domain = new {{ domain }}($this->getServiceContainer());
+$payload = $domain->add{{ foreign_class }}($id, $data);
+return $this->responder->run($request, $payload);
