--- a/templates/action/to-many-remove-run.twig
+++ b/templates/action/to-many-remove-run.twig
@@ -5,5 +5,5 @@ if (!isset($body['data'])) {
 $data = $body['data'];
 $id = $this->getParam('id');
 $domain = new {{ domain }}($this->getServiceContainer());
-$payload = $domain->set{{ foreign }}($id, $data);
+$payload = $domain->remove{{ foreign_class }}($id, $data);
 return $this->responder->run($request, $payload);
