--- a/templates/domain/create.twig
+++ b/templates/domain/create.twig
@@ -1,6 +1,7 @@
 // hydrate
 $serializer = {{ class }}::getSerializer();
 ${{ model }} = $serializer->hydrate(new {{ class }}(), $data);
+{% if validate %}
 
 // validate
 if (!${{ model }}->validate()) {
@@ -8,6 +9,14 @@ if (!${{ model }}->validate()) {
 		'errors' => ${{ model }}->getValidationFailures()
 	]);
 }
+{% endif %}
 
+// dispatch
+$event = new {{ class }}Event(${{ model }});
+$dispatcher = $this->getServiceContainer()->getDispatcher();
+$dispatcher->dispatch({{ class }}Event::PRE_CREATE, $event);
+$dispatcher->dispatch({{ class }}Event::PRE_SAVE, $event);
 ${{ model }}->save();
+$dispatcher->dispatch({{ class }}Event::POST_CREATE, $event);
+$dispatcher->dispatch({{ class }}Event::POST_SAVE, $event);
 return new Created(['model' => ${{ model }}]);
