--- a/templates/domain/delete.twig
+++ b/templates/domain/delete.twig
@@ -6,9 +6,13 @@ if (${{ model }} === null) {
 }
 
 // delete
+$event = new {{ class }}Event(${{ model }});
+$dispatcher = $this->getServiceContainer()->getDispatcher();
+$dispatcher->dispatch({{ class }}Event::PRE_DELETE, $event);
 ${{ model }}->delete();
 
 if (${{ model }}->isDeleted()) {
+	$dispatcher->dispatch({{ class }}Event::POST_DELETE, $event);
 	return new Deleted(['model' => ${{ model }}]);
 }
 
