--- a/templates/domain/to-many-update.twig
+++ b/templates/domain/to-many-update.twig
@@ -22,7 +22,14 @@ if (count($errors) > 0) {
 	return new NotValid(['errors' => $errors]);
 }
 
+
+$event = new {{ class }}Event(${{ model }});
+$dispatcher = $this->getServiceContainer()->getDispatcher();
+$dispatcher->dispatch({{ class }}Event::PRE_{{ const }}_UPDATE, $event);
+$dispatcher->dispatch({{ class }}Event::PRE_SAVE, $event);
 $rows = ${{ model }}->save();
+$dispatcher->dispatch({{ class }}Event::POST_{{ const }}_UPDATE, $event);
+$dispatcher->dispatch({{ class }}Event::POST_SAVE, $event);
 
 if ($rows > 0) {
 	return Updated(['model' => ${{ model }}]);
