--- a/templates/domain/to-one-set.twig
+++ b/templates/domain/to-one-set.twig
@@ -8,7 +8,15 @@ if (${{ model }} === null) {
 // update
 if (${{ model }}->get{{ local }}() !== ${{ fk_id }}) {
 	${{ model }}->set{{ local }}(${{ fk_id }});
+
+	$event = new {{ class }}Event(${{ model }});
+	$dispatcher = $this->getServiceContainer()->getDispatcher();
+	$dispatcher->dispatch({{ class }}Event::PRE_{{ const }}_UPDATE, $event);
+	$dispatcher->dispatch({{ class }}Event::PRE_SAVE, $event);
 	${{ model }}->save();
+	$dispatcher->dispatch({{ class }}Event::POST_{{ const }}_UPDATE, $event);
+	$dispatcher->dispatch({{ class }}Event::POST_SAVE, $event);
+	
 	return Updated(['model' => ${{ model }}]);
 }
 
