--- a/templates/domain/update.twig
+++ b/templates/domain/update.twig
@@ -8,6 +8,7 @@ if (${{ model }} === null) {
 // hydrate
 $serializer = {{ class }}::getSerializer();
 ${{ model }} = $serializer->hydrate(${{ model }}, $data);
+{% if validate %}
 
 // validate
 if (!${{ model }}->validate()) {
@@ -16,7 +17,17 @@ if (!${{ model }}->validate()) {
 	]);
 }
 
+{% endif %}
+
+// dispatch
+$event = new {{ class }}Event(${{ model }});
+$dispatcher = $this->getServiceContainer()->getDispatcher();
+$dispatcher->dispatch({{ class }}Event::PRE_UPDATE, $event);
+$dispatcher->dispatch({{ class }}Event::PRE_SAVE, $event);
 $rows = ${{ model }}->save();
+$dispatcher->dispatch({{ class }}Event::POST_UPDATE, $event);
+$dispatcher->dispatch({{ class }}Event::POST_SAVE, $event);
+
 $payload = ['model' => ${{ model }}];
 
 if ($rows === 0) {
