--- a/templates/domain/create.twig
+++ b/templates/domain/create.twig
@@ -1,15 +1,14 @@
 // hydrate
 $serializer = {{ class }}::getSerializer();
 ${{ model }} = $serializer->hydrate(new {{ class }}(), $data);
-{% if validate %}
 
 // validate
-if (!${{ model }}->validate()) {
+$validator = $this->getValidator();
+if ($validator !== null && !$validator->validate(${{ model }})) {
 	return new NotValid([
-		'errors' => ${{ model }}->getValidationFailures()
+		'errors' => $validator->getValidationFailures()
 	]);
 }
-{% endif %}
 
 // dispatch
 $event = new {{ class }}Event(${{ model }});
