--- a/templates/domain/one-to-many-update.twig
+++ b/templates/domain/one-to-many-update.twig
@@ -5,14 +5,17 @@ if (${{ model }} === null) {
 	return new NotFound(['message' => '{{ class }} not found.']);
 }
 
-// remove them
+// remove all relationships before
+{{ foreign_class }}Query::create()->filterBy{{ reverse_related }}(${{ model }})->delete();
+
+// add them
 $errors = [];
 foreach ($data as $entry) {
 	if (!isset($entry['id'])) {
 		$errors[] = 'Missing id for {{ foreign_class }}';
 	}
 	${{ foreign_model }} = {{ foreign_class }}Query::create()->findOneById($entry['id']);
-	${{ model }}->remove{{ related }}(${{ foreign_model }});
+	${{ model }}->add{{ related }}(${{ foreign_model }});
 }
 
 if (count($errors) > 0) {
@@ -22,10 +25,10 @@ if (count($errors) > 0) {
 // save and dispatch events
 $event = new {{ class }}Event(${{ model }});
 $dispatcher = $this->getServiceContainer()->getDispatcher();
-$dispatcher->dispatch({{ class }}Event::PRE_{{ const }}_REMOVE, $event);
+$dispatcher->dispatch({{ class }}Event::PRE_{{ const }}_UPDATE, $event);
 $dispatcher->dispatch({{ class }}Event::PRE_SAVE, $event);
 $rows = ${{ model }}->save();
-$dispatcher->dispatch({{ class }}Event::POST_{{ const }}_REMOVE, $event);
+$dispatcher->dispatch({{ class }}Event::POST_{{ const }}_UPDATE, $event);
 $dispatcher->dispatch({{ class }}Event::POST_SAVE, $event);
 
 if ($rows > 0) {
