--- a/templates/domain/create.twig
+++ b/templates/domain/create.twig
@@ -1,21 +1,21 @@
 // hydrate
 $serializer = {{ class }}::getSerializer();
-${{ model }} = $serializer->hydrate(new {{ class }}(), $data);
+$model = $serializer->hydrate(new {{ class }}(), $data);
 
 // validate
 $validator = $this->getValidator();
-if ($validator !== null && !$validator->validate(${{ model }})) {
+if ($validator !== null && !$validator->validate($model)) {
 	return new NotValid([
 		'errors' => $validator->getValidationFailures()
 	]);
 }
 
 // dispatch
-$event = new {{ class }}Event(${{ model }});
+$event = new {{ class }}Event($model);
 $dispatcher = $this->getServiceContainer()->getDispatcher();
 $dispatcher->dispatch({{ class }}Event::PRE_CREATE, $event);
 $dispatcher->dispatch({{ class }}Event::PRE_SAVE, $event);
-${{ model }}->save();
+$model->save();
 $dispatcher->dispatch({{ class }}Event::POST_CREATE, $event);
 $dispatcher->dispatch({{ class }}Event::POST_SAVE, $event);
-return new Created(['model' => ${{ model }}]);
+return new Created(['model' => $model]);
