--- a/templates/domain/one-to-many-update.twig
+++ b/templates/domain/one-to-many-update.twig
@@ -1,12 +1,12 @@
 // find
-${{ model }} = $this->get($id);
+$model = $this->get($id);
 
-if (${{ model }} === null) {
+if ($model === null) {
 	return new NotFound(['message' => '{{ class }} not found.']);
 }
 
 // remove all relationships before
-{{ foreign_class }}Query::create()->filterBy{{ reverse_related }}(${{ model }})->delete();
+{{ foreign_class }}Query::create()->filterBy{{ reverse_related }}($model)->delete();
 
 // add them
 $errors = [];
@@ -14,8 +14,8 @@ foreach ($data as $entry) {
 	if (!isset($entry['id'])) {
 		$errors[] = 'Missing id for {{ foreign_class }}';
 	}
-	${{ foreign_model }} = {{ foreign_class }}Query::create()->findOneById($entry['id']);
-	${{ model }}->add{{ related }}(${{ foreign_model }});
+	$related = {{ foreign_class }}Query::create()->findOneById($entry['id']);
+	$model->add{{ related }}($related);
 }
 
 if (count($errors) > 0) {
@@ -23,16 +23,16 @@ if (count($errors) > 0) {
 }
 
 // save and dispatch events
-$event = new {{ class }}Event(${{ model }});
+$event = new {{ class }}Event($model);
 $dispatcher = $this->getServiceContainer()->getDispatcher();
 $dispatcher->dispatch({{ class }}Event::PRE_{{ const }}_UPDATE, $event);
 $dispatcher->dispatch({{ class }}Event::PRE_SAVE, $event);
-$rows = ${{ model }}->save();
+$rows = $model->save();
 $dispatcher->dispatch({{ class }}Event::POST_{{ const }}_UPDATE, $event);
 $dispatcher->dispatch({{ class }}Event::POST_SAVE, $event);
 
 if ($rows > 0) {
-	return Updated(['model' => ${{ model }}]);
+	return Updated(['model' => $model]);
 }
 
-return NotUpdated(['model' => ${{ model }}]);
+return NotUpdated(['model' => $model]);
