--- a/templates/domain/to-one-set.twig
+++ b/templates/domain/to-one-set.twig
@@ -1,23 +1,23 @@
 // find
-${{ model }} = $this->get($id);
+$model = $this->get($id);
 
-if (${{ model }} === null) {
+if ($model === null) {
 	return new NotFound(['message' => '{{ class }} not found.']);
 }
 
 // update
-if (${{ model }}->get{{ local }}() !== ${{ fk_id }}) {
-	${{ model }}->set{{ local }}(${{ fk_id }});
+if ($model->get{{ local }}() !== $relatedId) {
+	$model->set{{ local }}($relatedId);
 
-	$event = new {{ class }}Event(${{ model }});
+	$event = new {{ class }}Event($model);
 	$dispatcher = $this->getServiceContainer()->getDispatcher();
 	$dispatcher->dispatch({{ class }}Event::PRE_{{ const }}_UPDATE, $event);
 	$dispatcher->dispatch({{ class }}Event::PRE_SAVE, $event);
-	${{ model }}->save();
+	$model->save();
 	$dispatcher->dispatch({{ class }}Event::POST_{{ const }}_UPDATE, $event);
 	$dispatcher->dispatch({{ class }}Event::POST_SAVE, $event);
 	
-	return Updated(['model' => ${{ model }}]);
+	return Updated(['model' => $model]);
 }
 
-return NotUpdated(['model' => ${{ model }}]);
+return NotUpdated(['model' => $model]);
