More ember generators

--- a/templates/serializer/hydrate.twig
+++ b/templates/serializer/hydrate.twig
@@ -1,6 +1,8 @@
 // attributes
 $attribs = isset($data['attributes']) ? $data['attributes'] : [];
 
+{% if normalizer %}$service = $this->getServiceContainer();
+{% endif %}
 $model = HydrateUtils::hydrate($attribs, $model, {{ code|raw }});
 
 // relationships
