--- a/templates/domain/one-to-many-update.twig
+++ b/templates/domain/one-to-many-update.twig
@@ -24,12 +24,11 @@ if (count($errors) > 0) {
 
 // save and dispatch events
 $event = new {{ class }}Event($model);
-$dispatcher = $this->getServiceContainer()->getDispatcher();
-$dispatcher->dispatch({{ class }}Event::PRE_{{ const }}_UPDATE, $event);
-$dispatcher->dispatch({{ class }}Event::PRE_SAVE, $event);
+$this->dispatch({{ class }}Event::PRE_{{ const }}_UPDATE, $event);
+$this->dispatch({{ class }}Event::PRE_SAVE, $event);
 $rows = $model->save();
-$dispatcher->dispatch({{ class }}Event::POST_{{ const }}_UPDATE, $event);
-$dispatcher->dispatch({{ class }}Event::POST_SAVE, $event);
+$this->dispatch({{ class }}Event::POST_{{ const }}_UPDATE, $event);
+$this->dispatch({{ class }}Event::POST_SAVE, $event);
 
 if ($rows > 0) {
 	return Updated(['model' => $model]);
