--- a/templates/domain/update.twig
+++ b/templates/domain/update.twig
@@ -19,12 +19,11 @@ if ($validator !== null && !$validator->validate($model)) {
 
 // dispatch
 $event = new {{ class }}Event($model);
-$dispatcher = $this->getServiceContainer()->getDispatcher();
-$dispatcher->dispatch({{ class }}Event::PRE_UPDATE, $event);
-$dispatcher->dispatch({{ class }}Event::PRE_SAVE, $event);
+$this->dispatch({{ class }}Event::PRE_UPDATE, $event);
+$this->dispatch({{ class }}Event::PRE_SAVE, $event);
 $rows = $model->save();
-$dispatcher->dispatch({{ class }}Event::POST_UPDATE, $event);
-$dispatcher->dispatch({{ class }}Event::POST_SAVE, $event);
+$this->dispatch({{ class }}Event::POST_UPDATE, $event);
+$this->dispatch({{ class }}Event::POST_SAVE, $event);
 
 $payload = ['model' => $model];
 
