--- a/templates/domain/delete.twig
+++ b/templates/domain/delete.twig
@@ -7,12 +7,11 @@ if ($model === null) {
 
 // delete
 $event = new {{ class }}Event($model);
-$dispatcher = $this->getServiceContainer()->getDispatcher();
-$dispatcher->dispatch({{ class }}Event::PRE_DELETE, $event);
+$this->dispatch({{ class }}Event::PRE_DELETE, $event);
 $model->delete();
 
 if ($model->isDeleted()) {
-	$dispatcher->dispatch({{ class }}Event::POST_DELETE, $event);
+	$this->dispatch({{ class }}Event::POST_DELETE, $event);
 	return new Deleted(['model' => $model]);
 }
 
