--- a/templates/domain/to-many-add.twig
+++ b/templates/domain/to-many-add.twig
@@ -4,15 +4,17 @@ $model = $this->get($id);
 if ($model === null) {
 	return new NotFound(['message' => '{{ class }} not found.']);
 }
- 
+
 // update
+$serializer = {{ class }}::getSerializer();
+$method = 'add' . $serializer->getCollectionMethodName('{{ related }}');
 $errors = [];
 foreach ($data as $entry) {
 	if (!isset($entry['id'])) {
 		$errors[] = 'Missing id for {{ foreign_class }}';
 	}
 	$related = {{ foreign_class }}Query::create()->findOneById($entry['id']);
-	$model->add{{ related }}($related);
+	$model->$method($related);
 }
 
 if (count($errors) > 0) {
@@ -21,12 +23,11 @@ if (count($errors) > 0) {
 
 // save and dispatch events
 $event = new {{ class }}Event($model);
-$dispatcher = $this->getServiceContainer()->getDispatcher();
-$dispatcher->dispatch({{ class }}Event::PRE_{{ const }}_ADD, $event);
-$dispatcher->dispatch({{ class }}Event::PRE_SAVE, $event);
+$this->dispatch({{ class }}Event::PRE_{{ const }}_ADD, $event);
+$this->dispatch({{ class }}Event::PRE_SAVE, $event);
 $rows = $model->save();
-$dispatcher->dispatch({{ class }}Event::POST_{{ const }}_ADD, $event);
-$dispatcher->dispatch({{ class }}Event::POST_SAVE, $event);
+$this->dispatch({{ class }}Event::POST_{{ const }}_ADD, $event);
+$this->dispatch({{ class }}Event::POST_SAVE, $event);
 
 if ($rows > 0) {
 	return Updated(['model' => $model]);
