--- a/templates/domain/to-many-remove.twig
+++ b/templates/domain/to-many-remove.twig
@@ -6,13 +6,15 @@ if ($model === null) {
 }
 
 // remove them
+$serializer = {{ class }}::getSerializer();
+$method = 'remove' . $serializer->getCollectionMethodName('{{ related }}');
 $errors = [];
 foreach ($data as $entry) {
 	if (!isset($entry['id'])) {
 		$errors[] = 'Missing id for {{ foreign_class }}';
 	}
 	$related = {{ foreign_class }}Query::create()->findOneById($entry['id']);
-	$model->remove{{ related }}($related);
+	$model->$method($related);
 }
 
 if (count($errors) > 0) {
@@ -21,12 +23,11 @@ if (count($errors) > 0) {
 
 // save and dispatch events
 $event = new {{ class }}Event($model);
-$dispatcher = $this->getServiceContainer()->getDispatcher();
-$dispatcher->dispatch({{ class }}Event::PRE_{{ const }}_REMOVE, $event);
-$dispatcher->dispatch({{ class }}Event::PRE_SAVE, $event);
+$this->dispatch({{ class }}Event::PRE_{{ const }}_REMOVE, $event);
+$this->dispatch({{ class }}Event::PRE_SAVE, $event);
 $rows = $model->save();
-$dispatcher->dispatch({{ class }}Event::POST_{{ const }}_REMOVE, $event);
-$dispatcher->dispatch({{ class }}Event::POST_SAVE, $event);
+$this->dispatch({{ class }}Event::POST_{{ const }}_REMOVE, $event);
+$this->dispatch({{ class }}Event::POST_SAVE, $event);
 
 if ($rows > 0) {
 	return Updated(['model' => $model]);
