Move code from serializer to domain

--- a/templates/domain/create.twig
+++ b/templates/domain/create.twig
@@ -1,6 +1,7 @@
 // hydrate
 $serializer = {{ class }}::getSerializer();
 $model = $serializer->hydrate(new {{ class }}(), $data);
+$this->hydrateRelationships($model, $data);
 
 // validate
 $validator = $this->getValidator();
