--- a/templates/domain/to-many-add.twig
+++ b/templates/domain/to-many-add.twig
@@ -5,20 +5,11 @@ if ($model === null) {
 	return new NotFound(['message' => '{{ class }} not found.']);
 }
 
-// update
-$serializer = {{ class }}::getSerializer();
-$method = 'add' . $serializer->getCollectionMethodName('{{ related }}');
-$errors = [];
-foreach ($data as $entry) {
-	if (!isset($entry['id'])) {
-		$errors[] = 'Missing id for {{ foreign_class }}';
-	}
-	$related = {{ foreign_class }}Query::create()->findOneById($entry['id']);
-	$model->$method($related);
-}
-
-if (count($errors) > 0) {
-	return new NotValid(['errors' => $errors]);
+// pass add to internal logic
+try {
+	$this->doAdd{{ related_name }}($model, $data);
+} catch (ErrorsException $e) {
+	return new NotValid(['errors' => $e->getErrors()]);
 }
 
 // save and dispatch events
