--- a/templates/domain/to-one-set.twig
+++ b/templates/domain/to-one-set.twig
@@ -7,12 +7,11 @@ if ($model === null) {
 
 // update
 if ($this->doSet{{ related_name }}Id($model, $relatedId)) {
-	$event = new {{ class }}Event($model);
-	$this->dispatch({{ class }}Event::PRE_{{ const }}_UPDATE, $event);
-	$this->dispatch({{ class }}Event::PRE_SAVE, $event);
+	$this->dispatch({{ class }}Event::PRE_{{ const }}_UPDATE, $model);
+	$this->dispatch({{ class }}Event::PRE_SAVE, $model);
 	$model->save();
-	$this->dispatch({{ class }}Event::POST_{{ const }}_UPDATE, $event);
-	$this->dispatch({{ class }}Event::POST_SAVE, $event);
+	$this->dispatch({{ class }}Event::POST_{{ const }}_UPDATE, $model);
+	$this->dispatch({{ class }}Event::POST_SAVE, $model);
 
 	return Updated(['model' => $model]);
 }
