--- a/templates/domain/paginate.twig
+++ b/templates/domain/paginate.twig
@@ -19,7 +19,11 @@ if (!empty($filter)) {
 }
 
 // paginate
-$model = $query->paginate($page, $size);
+if ($size == -1) {
+	$model = $query->findAll();
+} else {
+	$model = $query->paginate($page, $size);
+}
 
 // run response
 return new Found(['model' => $model]);
