Pagination generation; better ember generation; hydrate from serializer to domain (Fixes #10)

--- a/templates/domain/create.twig
+++ b/templates/domain/create.twig
@@ -1,7 +1,6 @@
 // hydrate
 $data = $this->normalize($data);
-$serializer = {{ class }}::getSerializer();
-$model = $serializer->hydrate(new {{ class }}(), $data);
+$model = $this->hydrate(new {{ class }}(), $data);
 $this->hydrateRelationships($model, $data);
 
 // dispatch pre save hooks
