--- a/templates/domain/applyFilter.twig
+++ b/templates/domain/applyFilter.twig
@@ -2,24 +2,7 @@ if (is_array($filter)) {
 
 	// filter by fields
 	if (isset($filter['fields'])) {
-    	foreach ($filter['fields'] as $column => $value) {
-        	$pos = strpos($column, '.');
-        	if ($pos !== false) {
-        		$rel = NameUtils::toStudlyCase(substr($column, 0, $pos));
-        		$col = substr($column, $pos + 1);
-        		$method = 'use' . $rel . 'Query';
-        		if (method_exists($query, $method)) {
-        			$sub = $query->$method();
-        			$this->applyFilter($sub, ['fields' => [$col => $value]]);
-        			$sub->endUse();
-        		}
-        	} else {
-        		$method = 'filterBy' . NameUtils::toStudlyCase($column);
-        		if (method_exists($query, $method)) {
-        			$query->$method($value);
-        		}
-        	}
-        }
+    	$this->filterFields($query, $filter);
     }
     
     // filter by features
@@ -28,6 +11,11 @@ if (is_array($filter)) {
     	if ($features->contains('random')) {
     		$query->addAscendingOrderByColumn('RAND()');
     	}
+    }
+    
+    // search
+    if (isset($filter['search']) && method_exists($this, 'search')) {
+    	$this->search($query, $filter['search']);
     }
 }
 
